--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" id="wikicontaineri"></div>
+  <div class="container" id="wiki-container"></div>
   <script src="script.js"></script>
 </body>
 </html>
+
 
